ECA-342: localization of more beans
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@3896 37aeb1de-b14b-0410-9a0e-82b28170d228